--- a/templates/business/index.html
+++ b/templates/business/index.html
@@ -6,6 +6,6 @@
     <title>Care Chatbot</title>
 </head>
 <body>
-    <h1>Cororonasafe Care: Open Health Care Network</h1>
+    <h1>Cororonasafe Care: Open Health Care Network, New Changes Have Been Made.</h1>
 </body>
 </html>
